update files with new edits

--- a/about.html
+++ b/about.html
@@ -14,9 +14,9 @@
       <div class="nav">
         <a href="index.html"><span class="title">Jess Guilford // Portfolio</span></a>
         <ul class="navlinks">
-          <a href="#"><li>About</li></a>
+          <a href="about.html"><li>About</li></a>
           <a href="articles.html"><li>Articles</li></a>
-          <a href="#"><li>Contact</li></a>
+          <a href="#" id="contact-page"><li>Contact</li></a>
         </ul>
       </div>
       <div class="about-main">
