--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
         <ul class="navlinks">
           <a href="about.html"><li>About</li></a>
           <a href="articles.html"><li>Articles</li></a>
-          <a href="#"><li>Contact</li></a>
+          <a href="#" id="contact-page"><li>Contact</li></a>
         </ul>
       </div>
       <div id="cool-animated-background-goes-here">
-        <!-- <div class="stripe">
-        </div> -->
         <div class="masthead">
           <!-- <img src="images/anchor-logo03.png" id="main-logo"> -->
           <h1 class="center caps">Hey there,</h1>
