--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="item-info" id="info-item02">
               <h1>Adopt A Pet</h1>
               <p>Group Project at Epicodus</p>
-              <p>This web app prototype uses javaScript to match potential adopters with pets in need of homes. For demo purposes, IndexedDB is used to temporarily store information client-side.</p>
+              <p>This web app prototype uses javaScript to match potential adopters with pets in need of homes. IndexedDB is used to temporarily store information client-side.</p>
               <a href="http://arolling.github.io/pet-tinder/" target="_blank">View</a>
             </div>
             <div class="item-label" id="item02">
@@ -71,7 +71,7 @@
             <div class="item-info" id="info-item03">
               <h1>Pallbearer</h1>
               <p>Individual Project at Epicodus</p>
-              <p>The goal for this project was to create a responsive website with a simple tile-based layout. This design uses css and media queries to scale and transform according to the device size.</p>
+              <p>This website uses a simple, responsive, tile-based layout. It was created with css and media queries to scale and transform according to the device size.</p>
               <a href="http://jessguilford.github.io/pallbearer-codereview/" target="_blank">View</a>
             </div>
             <div class="item-label" id="item03">
