decrease horizontal item font size and padding

--- a/about.html
+++ b/about.html
@@ -46,13 +46,16 @@
         <br />
         <h1>Some cool things I've done</h1>
         <h2>(AKA My Resume)</h2>
-        <p><strong>Managed e-commerce marketing for a vintage furniture store:</strong> At City Home, I established a style guide and social media strategy (and more than doubled their instagram following + engagement in two months). I currently manage their email marketing and blog.</p>
+        <p><strong>Managed e-commerce marketing for a vintage furniture store:</strong></p>
+        <p>At City Home, I established a style guide and social media strategy (and more than doubled their instagram following + engagement in two months). I currently manage their email marketing and blog.</p>
         <p><em>Writer/Designer: City Home PDX, 12.2015-present</em></p>
         <br />
-        <p><strong>Worked as a marketing assistant:</strong> I executed promotional emails sent to a list of over 100,000 contacts, wrote copy, and made blog posts about direct mail interesting.</p>
+        <p><strong>Worked as a marketing assistant:</strong></p>
+        <p>I executed promotional emails sent to a list of over 100,000 contacts, wrote copy, and made blog posts about direct mail interesting.</p>
         <p><em>Marketing Assistant, Expresscopy.com, 11.2013-11.2015</em></p>
         <br />
-        <p><strong>Got a business degree:</strong> I studied business administration at U of O, with a focus on marketing and entrepreneurship.</p>
+        <p><strong>Got a business degree:</strong><p>
+        <p>I studied business administration at the University of Oregon, with a focus on marketing and entrepreneurship.</p>
         <p><em>B.S. in Business Administration, University of Oregon, 2013</em></p>
       </div>
     </div>
