--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
   <body>
     <div class="container">
       <div class="nav">
-        <a href="index.html"><span class="title">Jess Guilford // Portfolio</span></a>
         <ul class="navlinks">
+          <a href="index.html"><li>Portfolio</li></a>
           <a href="about.html"><li>About</li></a>
           <a href="articles.html"><li>Articles</li></a>
           <a href="#" id="contact-page"><li>Contact</li></a>
