add some new portfolio images

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="portfolio-gallery">
         <div class="col">
           <div class="portfolio-item vert-item">
-            <a href="images/email-layout-example.png" target="_blank"><img src="images/email-layout-example.png" class="img-thumbnail"></a>
+            <a href="images/email-layout-example.png" target="_blank"><img src="images/email-layout-example-s.png" class="img-thumbnail"></a>
             <div class="item-info" id="info-item01">
               <h1>City Home Email Template</h1>
               <p>Client: <a href="http://cityhomepdx.com/" target="_blank">City Home PDX</a></p>
@@ -81,16 +81,17 @@
             </div>
           </div>
           <div class="portfolio-item vert-item">
-            <a href="http://jessguilford.github.io/horoscopeproject/" target="_blank"><img src="images/horoscope.png" class="img-thumbnail"></a>
+            <a href="http://jessguilford.github.io/sugarbean-coffee-day-2/" target="_blank"><img src="images/sugarbean.png" class="img-thumbnail"></a>
             <div class="item-info" id="info-item04">
-              <h1>Bad Horoscopes</h1>
-              <p>Individual Project</p>
-              <p>Bad Horoscopes uses jQuery to display items based on a combination of "this" and element sibling relationships.</p>
-              <a href="http://cityhomepdx.com/" target="_blank">View</a>
+              <h1>Sugarbean Coffee</h1>
+              <p>Pair Project at Epicodus</p>
+              <p>With Christine Tacha</p>
+              <p>Christine and I created this responsive website for a fictional coffee shop using Sass and Bourbon. I also created the custom 'sugarbean' logo.</p>
+              <a href="http://jessguilford.github.io/sugarbean-coffee-day-2/" target="_blank">View</a>
             </div>
             <div class="item-label" id="item04">
-              <h1>Bad Horoscopes</h1>
-              <p>Exercise with jQuery</p>
+              <h1>Sugarbean Coffee</h1>
+              <p>Responsive Website</p>
               <div class="item-x-toggle" id="x-toggle-item04">+</div>
             </div>
           </div>
