change city home layout copy

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="item-info" id="info-item01">
               <h1>City Home Email Template</h1>
               <p>Client: <a href="http://cityhomepdx.com/" target="_blank">City Home PDX</a></p>
-              <p>While City Home has an active email subscriber base, click through rates previously averaged between 2% and 3%. After implementing this layout, click throughs increased to 6.9%.</p>
+              <p>I created this custom Mailchimp template for City Home in order to increase email performance. Click through rates previously averaged between 2% and 3%. After implementing this layout, click throughs increased to 6.9%.</p>
               <a href="http://cityhomepdx.com/" target="_blank">View</a>
             </div>
             <div class="item-label" id="item01">
