--- a/index.html
+++ b/index.html
@@ -91,37 +91,37 @@
             </div>
             <div class="item-label" id="item04">
               <h1>Sugarbean Coffee</h1>
-              <p>Responsive Website</p>
+              <p>Responsive Website with Sass</p>
               <div class="item-x-toggle" id="x-toggle-item04">+</div>
             </div>
           </div>
         </div>
         <div class="col col3">
           <div class="portfolio-item vert-item">
-            <a href="http://jessguilford.github.io/pingpong/" target="_blank"><img src="images/pingpong.png" class="img-thumbnail"></a>
+            <a href="http://jessguilford.github.io/nosh/" target="_blank"><img src="images/nosh.png" class="img-thumbnail"></a>
             <div class="item-info" id="info-item05">
-              <h1>Ping Pong</h1>
+              <h1>Nosh</h1>
               <p>Individual project at Epicodus</p>
-              <p>Ping Pong is a simple fizzbuzz type test. It uses javaScript to count up to a given number, and jquery to display and alter the results.</p>
-              <a href="http://jessguilford.github.io/pingpong/" target="_blank">View</a>
+              <p>Nosh is a responsive website created with CSS flexbox, transforms, and transitions.</p>
+              <a href="http://jessguilford.github.io/nosh/" target="_blank">View</a>
             </div>
             <div class="item-label" id="item05">
-              <h1>Ping Pong</h1>
-              <p>JavaScript exercise</p>
+              <h1>Nosh</h1>
+              <p>Responsive website with Flexbox</p>
               <div class="item-x-toggle" id="x-toggle-item05">+</div>
             </div>
           </div>
           <div class="portfolio-item horiz-item">
-            <a href="http://jessguilford.github.io/vacationizer/" target="_blank"><img src="images/vacationizer.png" class="img-thumbnail"></a>
+            <a href="http://jessguilford.github.io/vacationizer/" target="_blank"><img src="images/github-api.png" class="img-thumbnail"></a>
             <div class="item-info" id="info-item06">
-              <h1>The Vacationizer</h1>
+              <h1>Github Quicksearch</h1>
               <p>Individual Project at Epicodus</p>
-              <p>This web based quiz accepts user input, calculates a result, and returns a vacation destination.</p>
+              <p>This application accesses the Github API, then displays a list of information about a given user's repositiories.</p>
               <a href="http://jessguilford.github.io/vacationizer/" target="_blank">View</a>
             </div>
             <div class="item-label" id="item06">
-              <h1>The Vacationizer</h1>
-              <p>Quiz built with jQuery and Bootstrap</p>
+              <h1>Github Quicksearch</h1>
+              <p>Search page using Github's API</p>
               <div class="item-x-toggle" id="x-toggle-item06">+</div>
             </div>
           </div>
