tweak typography and column styling

--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
             </div>
           </div>
           <div class="portfolio-item horiz-item">
-            <a href="http://arolling.github.io/pet-tinder/" target="_blank"><img src="images/adoptapet.jpg" class="img-thumbnail"></a>
-            <div class="item-info" id="info-item02">
-              <h1>Adopt A Pet</h1>
-              <p>Group Project at Epicodus</p>
-              <p>This web app prototype uses javaScript to match potential adopters with pets in need of homes. IndexedDB is used to temporarily store information client-side.</p>
-              <a href="http://arolling.github.io/pet-tinder/" target="_blank">View</a>
+            <a href="http://jessguilford.github.io/vacationizer/" target="_blank"><img src="images/github-api.png" class="img-thumbnail"></a>
+            <div class="item-info" id="info-item06">
+              <h1>Github Quicksearch</h1>
+              <p>Individual Project at Epicodus</p>
+              <p>This application accesses the Github API, then displays a list of information about a given user's repositiories.</p>
+              <a href="http://jessguilford.github.io/vacationizer/" target="_blank">View</a>
             </div>
-            <div class="item-label" id="item02">
-              <h1>Adopt A Pet</h1>
-              <p>JavaScript web app prototype</p>
-              <div class="item-x-toggle" id="x-toggle-item02">+</div>
+            <div class="item-label" id="item06">
+              <h1>Github Quicksearch</h1>
+              <p>Search page using Github's API</p>
+              <div class="item-x-toggle" id="x-toggle-item06">+</div>
             </div>
           </div>
         </div>
@@ -71,7 +71,7 @@
             <div class="item-info" id="info-item03">
               <h1>Pallbearer</h1>
               <p>Individual Project at Epicodus</p>
-              <p>This website uses a simple, responsive, tile-based layout. It was created with css and media queries to scale and transform according to the device size.</p>
+              <p>This website uses a responsive, tile-based layout. It was created with css and media queries to scale and transform according to the device size.</p>
               <a href="http://jessguilford.github.io/pallbearer-codereview/" target="_blank">View</a>
             </div>
             <div class="item-label" id="item03">
@@ -112,17 +112,17 @@
             </div>
           </div>
           <div class="portfolio-item horiz-item">
-            <a href="http://jessguilford.github.io/vacationizer/" target="_blank"><img src="images/github-api.png" class="img-thumbnail"></a>
-            <div class="item-info" id="info-item06">
-              <h1>Github Quicksearch</h1>
-              <p>Individual Project at Epicodus</p>
-              <p>This application accesses the Github API, then displays a list of information about a given user's repositiories.</p>
-              <a href="http://jessguilford.github.io/vacationizer/" target="_blank">View</a>
+            <a href="http://arolling.github.io/pet-tinder/" target="_blank"><img src="images/adoptapet.jpg" class="img-thumbnail"></a>
+            <div class="item-info" id="info-item02">
+              <h1>Adopt A Pet</h1>
+              <p>Group Project at Epicodus</p>
+              <p>This web app prototype uses javaScript to match potential adopters with pets in need of homes. IndexedDB is used to temporarily store information client-side.</p>
+              <a href="http://arolling.github.io/pet-tinder/" target="_blank">View</a>
             </div>
-            <div class="item-label" id="item06">
-              <h1>Github Quicksearch</h1>
-              <p>Search page using Github's API</p>
-              <div class="item-x-toggle" id="x-toggle-item06">+</div>
+            <div class="item-label" id="item02">
+              <h1>Adopt A Pet</h1>
+              <p>JavaScript web app prototype</p>
+              <div class="item-x-toggle" id="x-toggle-item02">+</div>
             </div>
           </div>
         </div>
