add patterned background image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="js/scripts.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="hero-container">
       <div class="nav">
         <a href="index.html"><span class="title">Jess Guilford // Portfolio</span></a>
         <ul class="navlinks">
@@ -19,22 +19,22 @@
           <a href="#" id="contact-page"><li>Contact</li></a>
         </ul>
       </div>
-      <div id="cool-animated-background-goes-here">
+      <div>
         <div class="masthead">
           <!-- <img src="images/anchor-logo03.png" id="main-logo"> -->
           <h1 class="center caps">Hey there,</h1>
-          <h2>My name is Jess. I'm a junior web developer with a background in e-commerce marketing.</h2>
-        </div>
-        <div class="see-work">
-          <a href="#front-page-portfolio">
-            <h2>See My Work</h2>
-            <h2>&#9660;</h2>
-          </a>
+          <h2>My name is Jess. I'm a junior web developer with a background in marketing.</h2>
+          <div class="see-work">
+            <a href="#front-page-portfolio">
+              <h2>See My Work</h2>
+              <h2>&#9660;</h2>
+            </a>
+          </div>
         </div>
       </div>
-      <div id="front-page-portfolio">
-      </div>
-      <div class="portfolio-gallery">
+    </div>
+    <div class="container">
+      <div class="portfolio-gallery" id="front-page-portfolio">
         <div class="col">
           <div class="portfolio-item vert-item">
             <a href="images/email-layout-example.png" target="_blank"><img src="images/email-layout-example-s.png" class="img-thumbnail"></a>
@@ -51,12 +51,12 @@
             </div>
           </div>
           <div class="portfolio-item horiz-item">
-            <a href="http://jessguilford.github.io/vacationizer/" target="_blank"><img src="images/github-api.png" class="img-thumbnail"></a>
+            <a href="http://jessguilford.github.io/github-API-project/" target="_blank"><img src="images/github-api.png" class="img-thumbnail"></a>
             <div class="item-info" id="info-item06">
               <h1>Github Quicksearch</h1>
               <p>Individual Project at Epicodus</p>
               <p>This application accesses the Github API, then displays a list of information about a given user's repositiories.</p>
-              <a href="http://jessguilford.github.io/vacationizer/" target="_blank">View</a>
+              <a href="http://jessguilford.github.io/github-API-project/" target="_blank">View</a>
             </div>
             <div class="item-label" id="item06">
               <h1>Github Quicksearch</h1>
@@ -67,16 +67,16 @@
         </div>
         <div class="col">
           <div class="portfolio-item horiz-item">
-            <a href="http://jessguilford.github.io/pallbearer-codereview/" target="_blank"><img src="images/pallbearer.png" class="img-thumbnail"></a>
+            <a href="http://jessguilford.github.io/blog-template/index.html" target="_blank"><img src="images/uncanny.png" class="img-thumbnail"></a>
             <div class="item-info" id="info-item03">
-              <h1>Pallbearer</h1>
-              <p>Individual Project at Epicodus</p>
-              <p>This website uses a responsive, tile-based layout. It was created with css and media queries to scale and transform according to the device size.</p>
-              <a href="http://jessguilford.github.io/pallbearer-codereview/" target="_blank">View</a>
+              <h1>Uncanny Observation</h1>
+              <p>Blog template</p>
+              <p>This responsive blog design was created with Sass and contains styling for the main page, individual posts, and comment sections.</p>
+              <a href="http://jessguilford.github.io/blog-template/index.html" target="_blank">View</a>
             </div>
             <div class="item-label" id="item03">
-              <h1>Pallbearer</h1>
-              <p>Responsive website</p>
+              <h1>Uncanny Observation</h1>
+              <p>Blog template</p>
               <div class="item-x-toggle" id="x-toggle-item03">+</div>
             </div>
           </div>
