create subtle grey and cream header typography

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <div>
         <div class="masthead">
           <!-- <img src="images/anchor-logo03.png" id="main-logo"> -->
-          <h1 class="center caps">Hey there,</h1>
-          <h2>My name is Jess. I'm a junior web developer with a background in marketing.</h2>
+          <h1 class="center caps">Jess Guilford</h1>
+          <h2>Junior web developer with a background in marketing &amp; art</h2>
           <div class="see-work">
             <a href="#front-page-portfolio">
               <h2>See My Work</h2>
