add scroll effect to masthead

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a href="#" id="contact-page"><li>Contact</li></a>
         </ul>
       </div>
-      <div>
+      <div class="masthead-wrapper">
         <div class="masthead">
           <!-- <img src="images/anchor-logo03.png" id="main-logo"> -->
           <h1 class="center caps">Jess Guilford</h1>
@@ -33,7 +33,7 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container portfolio-container">
       <div class="portfolio-gallery" id="front-page-portfolio">
         <div class="col">
           <div class="portfolio-item vert-item">
