adjust navbar and other page styling

--- a/about.html
+++ b/about.html
@@ -10,15 +10,15 @@
     <script src="js/scripts.js"></script>
   </head>
   <body>
+    <div class="nav">
+      <a href="index.html"><span class="title">Jess Guilford // Portfolio</span></a>
+      <ul class="navlinks">
+        <a href="index.html"><li>Portfolio</li></a>
+        <a href="articles.html"><li>Articles</li></a>
+        <a href="#" id="contact-page"><li>Contact</li></a>
+      </ul>
+    </div>
     <div class="container">
-      <div class="nav">
-        <ul class="navlinks">
-          <a href="index.html"><li>Portfolio</li></a>
-          <a href="about.html"><li>About</li></a>
-          <a href="articles.html"><li>Articles</li></a>
-          <a href="#" id="contact-page"><li>Contact</li></a>
-        </ul>
-      </div>
       <div class="about-main">
         <h1>Nice to meet you.</h1>
         <p>My name is Jess Guilford. I started building websites as a kid, but it took me a few years (and a business degree) to realize that yes, <em>this</em> is what I want to do. I currently study at Epicodus and spend my nights building my own projects. I like to think it's the good kind of obsession.</p>
