--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="masthead">
           <!-- <img src="images/anchor-logo03.png" id="main-logo"> -->
           <h1 class="center caps">Jess Guilford</h1>
-          <h2>Junior web developer with a background in marketing &amp; art</h2>
+          <h2>Junior web developer with a background in E-Commerce marketing</h2>
           <div class="see-work">
             <a href="#front-page-portfolio">
               <h2>See My Work</h2>
@@ -127,19 +127,19 @@
           </div>
         </div>
       </div>
-      <div id="contact">
-        <div class="center caps">
-          <h1>Get in Touch</h1>
-          <h2>Let's make something awesome.</h2>
-          <h2>&#9660;</h2>
-        </div>
-        <br />
-        <h2 class="center caps">Email me</h2>
-        <p class="center">jess.guilford at gmail.com</p>
-        <br />
-        <h2 class="center caps">Find me on Github</h2>
-        <p class="center text"><a href="https://github.com/jessguilford">https://github.com/jessguilford</a></p>
+    </div>
+    <div id="contact">
+      <div class="center caps">
+        <h1>Get in Touch</h1>
+        <h2>Let's make something awesome.</h2>
+        <h2>&#9660;</h2>
       </div>
+      <br />
+      <h2 class="center caps">Email me</h2>
+      <p class="center">jess.guilford at gmail.com</p>
+      <br />
+      <h2 class="center caps">Find me on Github</h2>
+      <p class="center text"><a href="https://github.com/jessguilford">https://github.com/jessguilford</a></p>
     </div>
   </body>
 </html>
