--- a/articles.html
+++ b/articles.html
@@ -14,7 +14,8 @@
       <div class="nav">
         <a href="index.html"><span class="title">Jess Guilford // Portfolio</span></a>
         <ul class="navlinks">
-          <a href="index.html"><li>Portfolio</li></a>
+          <a href="index.html"><li>Web Design</li></a>
+          <a href="about.html"><li>Graphics</li></a>
           <a href="about.html"><li>About</li></a>
           <a href="#" id="contact-page"><li>Contact</li></a>
         </ul>
