--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
       <div class="nav">
         <a href="index.html"><span class="title">Jess Guilford // Portfolio</span></a>
         <ul class="navlinks">
+          <a href="index.html"><li>Web Design</li></a>
+          <a href="about.html"><li>Graphics</li></a>
+          <a href="articles.html"><li>Writing</li></a>
           <a href="about.html"><li>About</li></a>
-          <a href="articles.html"><li>Articles</li></a>
           <a href="#" id="contact-page"><li>Contact</li></a>
         </ul>
       </div>
@@ -23,7 +25,7 @@
         <div class="masthead">
           <!-- <img src="images/anchor-logo03.png" id="main-logo"> -->
           <h1 class="center caps">Jess Guilford</h1>
-          <h2>Junior web developer with a background in E-Commerce marketing</h2>
+          <h2>Web Development &amp; E-Commerce marketing</h2>
           <div class="see-work">
             <a href="#front-page-portfolio">
               <h2>See My Work</h2>
