--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
       <a href="index.html"><span class="title">Jess Guilford // Portfolio</span></a>
       <ul class="navlinks">
         <a href="index.html"><li>Web Design</li></a>
-        <a href="about.html"><li>Graphics</li></a>
+        <a href="design.html"><li>Graphics</li></a>
         <a href="articles.html"><li>Writing</li></a>
         <a href="#" id="contact-page"><li>Contact</li></a>
       </ul>
